hphp/test/zend/bad/ext/gd/tests/imagestring_error1.php
<?php

$result = imagestring('string', 1, 5, 5, 'String', 1);

?>